commit sito modificato

--- a/sito/pages/courses.html
+++ b/sito/pages/courses.html
@@ -40,6 +40,8 @@
 	  	<section id="touch">
         <h1>COURSES</h1>
         <div class="line"></div>
+        <p id="explanation">Here you can find all the courses that Frank Gym has thought for you. Below you can choose a parameter to filter them.
+        You can choose between Alphabetical and Level filter.</p>
 		<ul>
 			<li>
 				<div class="pint">
