--- a/sito/index.html
+++ b/sito/index.html
@@ -3,13 +3,13 @@
 	<head>
 		<title>FRANK GYM </title>
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0 , user-scalable=no"/>
-		<link type="text/css" rel="stylesheet" href="assets/styles/style.css">
-		<link rel="icon" type="image/png" href="client/assets/img/logo_footer.png" />
+		<link type="text/css" rel="stylesheet" href="http://frankgym.altervista.org/assets/styles/style.css">
+		<link rel="icon" type="image/png" href="http://frankgym.altervista.org/assets/img/logo_footer.png" />
         <script src="http://maps.googleapis.com/maps/api/js"></script>
 		<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Raleway:100|Raleway:200|Raleway:300|Raleway:400|Raleway:500|Raleway:600|Open+Sans:400|Open+Sans:300|Open+Sans:500|Open+Sans:600|Open+Sans:700|Open+Sans:800|Indie Flower:400">
-		<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-		<script src="//code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
+		<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+		<script src="http:/code.jquery.com/ui/1.11.1/jquery-ui.js"></script>
 		<script src="http://frankgym.altervista.org/assets/script/interaction.js"></script>
 		<meta charset="utf-8">
 	</head>
